--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,24 @@
 Flask==2.3.3
 Flask-SQLAlchemy==3.1.0
+Flask-Login==0.6.2
+Flask-OAuth
+authlib
+oauthlib==3.2.2
+requests==2.31.0
+Flask==2.3.3
+Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.2
+Flask-WTF==1.2.1
+Werkzeug==2.3.7
+SQLAlchemy==2.0.23
+Authlib==1.2.1
+python-dotenv==1.0.0
+Flask-Limiter==3.5.0
+email-validator==2.1.0
+pyOpenSSL==23.3.0
+WTForms==3.1.1
+requests==2.31.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+limits==3.6.0
